feat: implement converter